--- a/src/app/shared/styles/colors.scss
+++ b/src/app/shared/styles/colors.scss
@@ -9,3 +9,6 @@ $dark-card-bg: #212121;
 
 $primary-border-color: #00d32ae3;
 $dark-border-color: #00b424e3;
+
+$primary-divider-color: #9a9a9a4d;
+$dark-divider-color: #8787872c;
